--- a/client/src/app/trendComparer/trendComparer.tpl.html
+++ b/client/src/app/trendComparer/trendComparer.tpl.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-3" style="height: {{height}}px;">
 		<h3>Habits</h3>
-		<div ng-repeat="habit in habits" style="background-color: {{ uniqueColors[$index % habits.length].replace('o', 0.5) }}; border: solid 1px {{ uniqueColors[$index % habits.length].replace('o', 1) }};">
+		<div ng-repeat="habit in habits" style="background-color: {{ uniqueColors[$index % uniqueColors.length].replace('o', 0.5) }}; border: solid 1px {{ uniqueColors[$index % uniqueColors.length].replace('o', 1) }};">
 			<label class="checkbox habitLabel">
 				<input type="checkbox" ng-click="selectHabit($event, habit, uniqueColors[$index % habits.length])" id="{{ habit.name }}" /> {{ habit.name }}
 			</label>
@@ -9,6 +9,6 @@
 	</div>
 	<div class="col-9">
 		<h3>Last 10 Weeks</h3>
-		<line-chart class="chart" style="height: {{height}}px;" labels="labels" datasets="datasets"></line-chart>		
+		<line-chart class="chart" labels="labels" datasets="datasets" height="height"></line-chart>		
 	</div>
 </div>
