fix: select colors better. uhard code height

--- a/client/src/app/home/home.tpl.html
+++ b/client/src/app/home/home.tpl.html
@@ -7,6 +7,6 @@
 		<input type="file" name="file" />
 		<input class="btn btn-primary" upload-submit="uploadComplete(content, completed)" type="submit" value="Upload" />
 	</form>
-	<trend-comparer class="comparer" habits="habits" height="400"></trend-comparer>
+	<trend-comparer class="comparer" habits="habits"></trend-comparer>
 </div>
 
