fix: support periods of months

--- a/client/src/app/trendComparer/trendComparer.tpl.html
+++ b/client/src/app/trendComparer/trendComparer.tpl.html
@@ -16,6 +16,6 @@
 				Previous <select ng-model="goBack" ng-options="o.name for o in goBackOptions" ng-change="setupRange()"></select>
 			</div>
 		</div>
-		<line-chart class="chart" labels="labels" datasets="datasets"></line-chart>		
+		<line-chart class="chart" labels="labels" datasets="datasets" chart-options="chartOptions"></line-chart>		
 	</div>
 </div>
