--- a/client/src/app/home/home.tpl.html
+++ b/client/src/app/home/home.tpl.html
@@ -2,7 +2,7 @@
 	<div class="hero">
 		<div class="container">
 			<h1>Lift Trend</h1>
-			<h2>Find relationships between your Lift.do trends</h2>
+			<h2>Find relationships between your <a href="http://lift.do">Lift.do</a> trends</h2>
 		</div>
 	</div>
 	<div class="container">
