--- a/client/src/app/trendComparer/trendComparer.less
+++ b/client/src/app/trendComparer/trendComparer.less
@@ -1,7 +1,10 @@
+@legend-size: 23px;
+
 .habitLabel {
 	padding: 3px;
 	padding-left: 5px;
 	margin: 0;
+	font-weight: normal;
 
 	input[type="checkbox"] {
 		margin-left: 0;
@@ -11,9 +14,20 @@
 
 .chart {
 	margin-top: 10px;
+}
 
-	canvas {
-		min-height: 400px;
-		height: 100%;
-	}
+.legend {
+	float:left;
+	margin-top: 2px;
+	margin-right: 8px;
+	display: inline-block;
+	width: @legend-size;
+	height: @legend-size;
+}
+
+.periodLabel {
+	font-size: 16px;
+	font-weight: normal;
+	padding-top: 8px;
+	padding-right: 0;
 }
