fix: fix background in firefox

--- a/client/src/app/home/home.less
+++ b/client/src/app/home/home.less
@@ -8,17 +8,17 @@
 
 .hero {
 	background: url('./title@2x.png') no-repeat;
-	background-position-x: center;
-	background-position-y: -30px;
+	background-position: center -30px;
+	
 	-webkit-background-size: @background-height;
 	-moz-background-size: @background-height;
 	-o-background-size: @background-height;
 	background-size: @background-height;
+	
 	padding-top: @padding;
 	padding-bottom: @padding;
 	margin-bottom: 30px;
 	color: @color-on-hero;
-
 	height: 222px;
 
 	h1 {
