fix: wording change and readme

--- a/client/src/app/home/home.tpl.html
+++ b/client/src/app/home/home.tpl.html
@@ -1,8 +1,8 @@
 <div>
 	<div class="hero">
 		<div class="container">
-			<h1>Lift Trend</h1>
-			<h2>Find relationships between your <a href="http://lift.do">Lift.do</a> trends</h2>
+			<h1>Lift Trends</h1>
+			<h2>Find relationships between your <a href="http://lift.do">Lift.do</a> habits</h2>
 		</div>
 	</div>
 	<div class="container">
