--- a/client/src/app/home/home.tpl.html
+++ b/client/src/app/home/home.tpl.html
@@ -1,15 +1,21 @@
 <div>
 	<div class="hero">
 		<div class="container">
-			<h1>Lift Trends</h1>
+			<h1>Lift Trends <a class="" href="https://github.com/lukemurray/lift-trends" title="View project on GitHub"><i class="icon-github"></i> View on GitHub</a></h1>
 			<h2>Find relationships between your <a href="http://lift.do">Lift.do</a> habits</h2>
 		</div>
 	</div>
-	<div class="container">
+	<div class="upload-container">
+		<h3>Upload your Habits export from Lift.do below</h3>
 		<form ng-upload id="fileUpload" action="/upload">
 			<input id="uploader" type="file" name="file" />
 			<input class="btn btn-primary" upload-submit="uploadComplete(content, completed)" type="submit" value="Upload" />
 		</form>
+		<a class="help" href="javascript:;" ng-click="showExportInfo()">How<i class="icon-question"></i></a>
+		&nbsp;&nbsp;&nbsp;
+		<a class="help" href="javascript:;" ng-click="showExportInfo()">Why<i class="icon-question"></i></a>
+	</div>
+	<div class="container">
 		<trend-comparer class="comparer" habits="habits"></trend-comparer>
 	</div>
 </div>
