move things to same directory

--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -9,7 +9,7 @@
 		<h3>Upload your Habits export from Lift.do below</h3>
 		<form ng-upload id="fileUpload" action="/upload">
 			<input id="uploader" type="file" name="file" />
-			<input class="btn btn-primary" upload-submit="uploadComplete(content, completed)" type="submit" value="Upload" />
+			<input class="btn btn-primary pad-left" upload-submit="uploadComplete(content, completed)" type="submit" value="Upload" />
 		</form>
 		<a class="help" href="javascript:;" ng-click="showExportInfo()">How<i class="icon-question"></i></a>
 		&nbsp;&nbsp;&nbsp;
