add some info about why and how. can not be bothered with cool animations for this little app

--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -52,7 +52,6 @@
 	padding-bottom: 20px;
 	margin-bottom: 30px;
 	background-color: rgb(244,244,244);
-	//border-top: solid 1px @border-color;
 	border-bottom: solid 1px @border-color;
 
 	h3 {
@@ -71,4 +70,31 @@
 	.help {
 		font-size: 22px;
 	}
+
+	.note {
+		font-stylr: italic;
+	}
+}
+
+.modal {
+	padding: 20px;
+	background-color: #fff;
+	text-align: left;
+	border-top: solid 1px @border-color;
+	border-bottom: solid 1px @border-color;
+
+	.center {
+		position: relative;
+		top: 0;
+		width: 500px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+
+.footer {
+	padding-top: 40px;
+	padding-bottom: 20px;
+	text-align: center;
+	color: #a7a7a7;
 }
