--- a/src/less/main.less
+++ b/src/less/main.less
@@ -17,29 +17,29 @@
 //@import "code.less";
 @import "../../vendor/bootstrap/less/grid.less";
 
-//@import "tables.less";
+//@import "../../vendor/bootstrap/less/tables.less";
 @import "../../vendor/bootstrap/less/forms.less";
 @import "../../vendor/bootstrap/less/buttons.less";
 
 // Components: common
-//@import "component-animations.less";
+@import "../../vendor/bootstrap/less/component-animations.less";
 @import "../../vendor/bootstrap/less/dropdowns.less";
 @import "../../vendor/bootstrap/less/list-group.less";
 //@import "../../vendor/bootstrap/less/panels.less";
 //@import "../../vendor/bootstrap/less/wells.less";
-//@import "close.less";
+//@import "../../vendor/bootstrap/less/close.less";
 
 // Components: Nav
-@import "../../vendor/bootstrap/less/navs.less";
-@import "../../vendor/bootstrap/less/navbar.less";
-@import "../../vendor/bootstrap/less/button-groups.less";
+//@import "../../vendor/bootstrap/less/navs.less";
+//@import "../../vendor/bootstrap/less/navbar.less";
+//@import "../../vendor/bootstrap/less/button-groups.less";
 //@import "breadcrumbs.less";
 //@import "pagination.less";
 //@import "pager.less";
 
 // Components: Popovers
-//@import "modals.less";
-//@import "tooltip.less";
+//@import "../../vendor/bootstrap/less/modals.less";
+//@import "../../vendor/bootstrap/less/tooltip.less";
 //@import "../../vendor/bootstrap/less/popovers.less";
 
 // Components: Misc
