--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -3,6 +3,7 @@
 		<div class="container">
 			<h1>Lift Trends <a class="" href="https://github.com/lukemurray/lift-trends" title="View project on GitHub"><i class="icon-github"></i> View on GitHub</a></h1>
 			<h2>Find relationships between your <a href="http://lift.do">Lift.do</a> habits</h2>
+			<a href="https://twitter.com/share" class="twitter-share-button" data-text="Compare your Lift.do habits" data-via="lukedmurray" data-dnt="true">Tweet</a>
 		</div>
 	</div>
 	<div class="upload-container">
@@ -39,7 +40,9 @@
 	<div class="container">
 		<trend-comparer class="comparer" habits="habits"></trend-comparer>
 
-		<div class="footer">Made by Luke Murray. Check out the <a href="https://github.com/lukemurray/lift-trends"><i class="icon-github"></i> source</a>. Follow me on <a href="http://twitter.com/lukedmurray"><i class="icon-twitter"></i> Twitter</a>.</div>
+		<div class="footer">
+			<a href="https://twitter.com/lukedmurray" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @lukedmurray</a>
+		</div>
 	</div>
 </div>
 
