allow charts up to 5 years. Getting a bit squashed - need to add month grouping or select date ranges

--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -20,7 +20,7 @@
 			<div class="center" ng-show="exportInfo">
 				<ol>
 					<li>Log into your Lift.do account <a href="http://lift.do">here</a></li>
-					<li>Click the cog at the top right</li>
+					<li>Click your image at the top right to bring down the menu</li>
 					<li>Click "Settings"</li>
 					<li>Scroll down to "Export"</li>
 					<li>Click the "Export" button</li>
@@ -32,7 +32,7 @@
 			<div class="center" ng-show="whyInfo">
 				<p>Simply, I wanted to see if there were any correlations between my 'habits'. This is because my partner and I use Lift to track a range of things like certain pain or what types of food we ate.</p>
 				<strong>Why Upload?</strong>
-				<p>Currently at 24 July 2013, Lift.do does not provide an API of any kind. Or at least not that I could find. They do however provide the ability to export your habits and check-ins.</p>
+				<p>Currently at 22 May 2014, Lift.do does not provide an API of any kind. Or at least not that I could find. They do however provide the ability to export your habits and check-ins.</p>
 				<p>I <strong>do not</strong> store or keep any of your habit information. After the file is uploaded it is transferred back to your browser in another format and removed from the server. See <a href="https://github.com/lukemurray/lift-trends/blob/master/server.js">the server.js code</a> for more information.</p>
 			</div>
 		</div>
